feat: add support for security notes.
- fix `cardholderName` property reference.

--- a/src/lib/assets/css/styles.css
+++ b/src/lib/assets/css/styles.css
@@ -8,3 +8,8 @@ body {
   display: inline-flex !important;
   align-items: center !important;
 }
+
+.uk-textarea {
+  resize: vertical;
+  min-height: 32px;
+}
